# objects-model

./: CMakeLists.txt  README
lcmtypes/: om_object_list_t.lcm  om_object_t.lcm  om_xml_cmd_t.lcm
src/object_client/: CMakeLists.txt  object_client.c  object_client.h  test_object_client.c
src/object_renderer/: CMakeLists.txt  renderer_generic_object.c  renderer_generic_object.h
src/object_server/: CMakeLists.txt  object_server.c
